--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,42 +2,35 @@ name: Build RPM
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
   pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Set up Fedora build environment
-        uses: fedora-cloud/setup-fedora@v1
-        with:
-          release: 39
+    - name: Install RPM tools
+      run: |
+        sudo apt update
+        sudo apt install -y rpm dpkg-dev rpm2cpio cpio createrepo-c
 
-      - name: Install build tools
-        run: sudo dnf install -y rpm-build createrepo_c tar
+    - name: Prepare build directory
+      run: |
+        mkdir -p rpmbuild/{BUILD,BUILDROOT,RPMS,SOURCES,SPECS,SRPMS}
+        cp -r SOURCES/* rpmbuild/SOURCES/ || true
+        cp SPECS/*.spec rpmbuild/SPECS/
 
-      - name: Prepare source tarball
-        run: |
-          tar -czf kinoite-cleanup-cosmo-1.4.tar.gz cosmo-kinoite-cleanup-1.4
+    - name: Build RPM
+      run: |
+        rpmbuild --define "_topdir $PWD/rpmbuild" -ba rpmbuild/SPECS/*.spec
 
-      - name: Move sources
-        run: |
-          mkdir -p ~/rpmbuild/SOURCES ~/rpmbuild/SPECS
-          cp kinoite-cleanup-cosmo-1.4.tar.gz ~/rpmbuild/SOURCES/
-          cp fedora-kinoite-cleanup.spec ~/rpmbuild/SPECS/
-
-      - name: Build RPM
-        run: rpmbuild -ba ~/rpmbuild/SPECS/fedora-kinoite-cleanup.spec
-
-      - name: Upload RPM artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: rpm-packages
-          path: |
-            ~/rpmbuild/RPMS/**/*.rpm
-            ~/rpmbuild/SRPMS/**/*.src.rpm
+    - name: Upload built RPMs
+      uses: actions/upload-artifact@v4
+      with:
+        name: rpm-packages
+        path: rpmbuild/RPMS/
