Cleanup repo structure: move spec to SPECS and remove duplicates

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Build RPM
       run: |
-        rpmbuild --define "_topdir $PWD/rpmbuild" -ba rpmbuild/SPECS/*.spec
+        rpmbuild --define "_topdir $PWD" -ba SPECS/*.spec
 
     - name: Upload built RPMs
       uses: actions/upload-artifact@v4
