--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build RPM Package
+name: Build RPM
 
 on:
   push:
@@ -11,28 +11,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
-      - name: Install rpm-build tools
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y rpm rpm2cpio cpio make wget
-          sudo apt-get install -y ruby ruby-dev
-          sudo gem install fpm
+    - name: Install RPM tooling
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y rpm rpmdevtools make
 
-      - name: Prepare rpmbuild tree
-        run: |
-          mkdir -p rpmbuild/{BUILD,BUILDROOT,RPMS,SOURCES,SPECS,SRPMS}
-          cp SOURCES/*.tar.gz rpmbuild/SOURCES/
-          cp SPECS/*.spec rpmbuild/SPECS/
+    - name: Prepare rpmbuild tree
+      run: |
+        mkdir -p rpmbuild/{BUILD,RPMS,SOURCES,SPECS,SRPMS}
+        cp SOURCES/*.tar.gz rpmbuild/SOURCES/
+        cp SPECS/*.spec rpmbuild/SPECS/
 
-      - name: Build RPM
-        run: |
-          rpmbuild --define "_topdir $PWD/rpmbuild" -ba rpmbuild/SPECS/*.spec
+    - name: Build RPM
+      run: |
+        rpmbuild --define "_topdir $PWD/rpmbuild" -ba rpmbuild/SPECS/*.spec
 
-      - name: Upload RPM artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: rpm-packages
-          path: rpmbuild/RPMS/**/*.rpm
+    - name: Upload RPM artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: rpm-packages
+        path: rpmbuild/RPMS/**/*.rpm
